name:                   minecraft-nbt
version:                0.1.0.0
synopsis:               Encoding and decoding for Minecraft's Named Binary Tags (NBT)
description:            Please see README.md
homepage:               https://github.com/oldmanmike/hs-minecraft-nbt
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             oldmanmike.dev@gmail.com
copyright:              Copyright: (c) 2016 Michael Carpenter
category:               Data,Game
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Data.NBT
                        Data.NBT.Decode
                        Data.NBT.Encode
                        Data.NBT.Types
  build-depends:        array,
                        attoparsec,
                        base >= 4.7 && < 5,
                        bytestring,
                        text
  default-language:     Haskell2010

test-suite minecraft-nbt-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        array,
                        attoparsec,
                        base,
                        bytestring,
                        hspec,
                        minecraft-nbt,
                        QuickCheck,
                        text
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/hs-minecraft-nbt
